Dashboard - Image bug fix
Fixed an issue where the background image would not cover the entire dashboard page

--- a/Frontend/src/app/dashboard/dashboard.component.css
+++ b/Frontend/src/app/dashboard/dashboard.component.css
@@ -1,8 +1,8 @@
 .container {
     font-family: 'Arial', sans-serif;
     display: flex;
-    min-height: 100vh;
-    background-color: #f4f6f8;
+    width: 100%;
+    flex: 1;
 }
 
 .sidebar {
@@ -18,8 +18,7 @@
     display: flex;
     flex-direction: column;
     transition: all 0.3s ease;
-}
-
+  }
 .sidebar h1 {
     font-size: 28px;
     margin-bottom: 20px;
@@ -135,16 +134,17 @@
     margin-left: 250px;
     padding: 40px;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     transition: all 0.3s ease;
     background-image: url('/assets/images/background_image.png');
     background-size: cover;
-    background-position: center;
+    background-position: center center;
+    min-height: 100vh;
     background-attachment: fixed;
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    position: relative;
 }
 
 .dashboard-title {
@@ -159,7 +159,6 @@
     max-width: 1200px;
     background-color: rgba(255, 255, 255, 0.9);
     border-radius: 8px;
-    padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
@@ -167,7 +166,7 @@
     width: 100%;
     max-width: 600px;
     margin-bottom: 30px;
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: white;
     border-radius: 8px;
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -634,14 +633,32 @@ tbody tr:hover {
 
 .dark-image {
     background-image: url('/assets/images/background_image_dark.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    z-index: 1;
 }
 
 .light-image {
     background-image: url('/assets/images/background_image.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    z-index: 1;
 }
-.dark-text a{
+
+.dark-text a {
     color: white;
 }
+
 .dark-text a.active {
     color: #c91931;
 }
